// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentExecutionTracker matches final snapshot 1`] = `
<div>
  <div
    class="w-full text-white"
    data-testid="agent-tracker"
  >
    <div
      class="text-center mb-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Live Agent Execution
      </h3>
      <p
        class="text-xs text-slate-400"
      >
        Powered by Modular AI Agents
      </p>
    </div>
    <div
      class="flex items-center justify-center gap-4 flex-wrap"
    >
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative w-12 h-12 flex items-center justify-center rounded-full border-2 transition-colors border-green-500"
          data-status="completed"
          data-testid="node-injuryScout"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-xs text-center w-16 truncate"
        >
          Injury
        </span>
        <span
          class="hidden sm:block absolute top-6 left-full w-8 h-px bg-slate-600"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative w-12 h-12 flex items-center justify-center rounded-full border-2 transition-colors border-green-500"
          data-status="completed"
          data-testid="node-lineWatcher"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-xs text-center w-16 truncate"
        >
          Lines
        </span>
      </div>
    </div>
    <div
      class="text-center mt-4"
      data-testid="flow-complete"
    >
      <div
        class="inline-block px-3 py-1 bg-green-600/20 text-green-400 rounded"
      >
        Flow Complete
      </div>
    </div>
  </div>
</div>
`;

exports[`AgentExecutionTracker matches initial snapshot 1`] = `
<div>
  <div
    class="w-full text-white"
    data-testid="agent-tracker"
  >
    <div
      class="text-center mb-4"
    >
      <h3
        class="text-lg font-semibold"
      >
        Live Agent Execution
      </h3>
      <p
        class="text-xs text-slate-400"
      >
        Powered by Modular AI Agents
      </p>
    </div>
    <div
      class="flex items-center justify-center gap-4 flex-wrap"
    >
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative w-12 h-12 flex items-center justify-center rounded-full border-2 transition-colors border-slate-600"
          data-status="pending"
          data-testid="node-injuryScout"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-xs text-center w-16 truncate"
        >
          Injury
        </span>
        <span
          class="hidden sm:block absolute top-6 left-full w-8 h-px bg-slate-600"
        />
      </div>
      <div
        class="flex flex-col items-center"
      >
        <div
          class="relative w-12 h-12 flex items-center justify-center rounded-full border-2 transition-colors border-slate-600"
          data-status="pending"
          data-testid="node-lineWatcher"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle w-6 h-6"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
        </div>
        <span
          class="mt-2 text-xs text-center w-16 truncate"
        >
          Lines
        </span>
      </div>
    </div>
  </div>
</div>
`;
